<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Booking.BookingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_Home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/back"
            android:padding="15dp"
            android:src="@drawable/ic_home_while"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/dat_lich_cat_toc"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_SuccessBook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/chon_dich_vu_va_thoi_gian"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <Button
                        android:id="@+id/button_SelectService"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/background_border_black"
                        android:drawableStart="@drawable/ic_cut"
                        android:drawableEnd="@drawable/ic_baseline_play_arrow_24"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/chon_dich_vu" />

                    <com.wefika.flowlayout.FlowLayout
                        android:id="@+id/flowLayout_SelectedService"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/spinner_SelectDay"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent" />

                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scrollbars="none">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerView_SelectTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </HorizontalScrollView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/chon_tien_ich_free"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/checkBox_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_box_tien_ich_item_1" />

                    <CheckBox
                        android:id="@+id/checkBox_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_box_tien_ich_item_2" />

                    <CheckBox
                        android:id="@+id/checkBox_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_box_tien_ich_item_3" />

                    <CheckBox
                        android:id="@+id/checkBox_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_box_tien_ich_item_4" />

                    <CheckBox
                        android:id="@+id/checkBox_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_box_tien_ich_item_5" />

                    <CheckBox
                        android:id="@+id/checkBox_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_box_tien_ich_item_6" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <Switch
                            android:id="@+id/swich_YeuCauTuVan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/swich_yeu_cau_tu_van"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingTop="10dp"
                            android:text="Bạn đồng ý nghe thông tin về các chương trình bán hàng khuyến mãi, giảm giá"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Switch
                            android:id="@+id/swich_ChupAnhSauKhiCat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/swich_chup_anh_sau_cat"
                            android:textSize="18dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingTop="10dp"
                            android:text="Bạn cho phép chụp ảnh lưu lại kiểu tóc, để lần sau không phải mô tả lại cho thợ khác"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


        <Button
            android:id="@+id/button_SuccessBook"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:text="@string/success"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>